Prototype Pattern | 2.0